[project]
name = "opsml"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
description = ""
authors = [{name = "Thorrester", email = "<support@demmlai.com>"}]
readme = "README.md"
dependencies = [
    "joblib~=1.3",
    "numpy~=2.0",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2, <3",
    "polars>=1.10.0",
    "pyarrow>=15.0.0",
    "pydantic~=2.0",
    "scouter-ml>=0.3.2",
]

[project.optional-dependencies]
onnx = [
    "onnx~=1.16.0; platform_system == 'Linux' and python_version <= '3.11'",
    "onnx==1.16.1; platform_system == 'Windows' and python_version <= '3.11'",
    "onnx~=1.16.0; platform_system == 'Darwin' and python_version <= '3.11'",
    "onnx>=1.17.0; python_version >= '3.12'",
]
onnxruntime = [
    "onnxruntime~=1.16.0; python_version <= '3.11'",
    "onnxruntime>=1.18.0; python_version >= '3.12'",
]
sklearn_onnx = [
    "skl2onnx==1.16.0",
    "onnxmltools~=1.12",
    "opsml[onnx,onnxruntime]",
]


[dependency-groups]
dev = [
    "maturin >= 1.4.0, < 2.0.0",
    "pytest >= 7.0.0, < 8.0.0",
    "pytest-cov >= 5.0.0, < 6.0.0",
    "ruff >= 0.1.0, < 1.0.0",
    "mypy >= 1.0.0, < 2.0.0",
    "black >= 24.3.0, < 25.0.0",
    "pylint >= 3.0.0, < 4.0.0",
    "pytest-lazy-fixture >= 0.6.3, < 1.0.0",
    "isort >= 5.13.2, < 6.0.0",
    "pip>=24.3.1",
    "transformers>=4.46.3",
    "optimum>=1.23.3",
    "pytest-memray>=1.7.0",
    "torch>=2.4.1",
]


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.MASTER]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "design",
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-nested-blocks",
    "unused-argument",
    "fixme",
    "import-outside-toplevel"
]

[tool.flake8]
# This section is just a doc placeholder..see setup.cfg
max-complexity = 10
format = "pylint"
statistics = "True"
max-line-length = 125
# ignore non-PEP8 lints
ignore = ["E203", "W503", "W0511"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.mypy]
# platform configuration
python_version = "3.12"
platform = "linux"
mypy_path = "stubs"
ignore_missing_imports = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]
exclude = []

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "opsml.opsml"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[tool.uv]
package = false
