[project]
name = "opsml"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = "MIT"
version = "3.0.1"
description = ""
authors = [{name = "Thorrester", email = "<support@demmlai.com>"}]
readme = "README.md"
dependencies = [
    "joblib~=1.3",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.16.0; platform_system == 'Linux' and python_version <= '3.12'",
    "onnx==1.16.1; platform_system == 'Windows'",
    "onnx>=1.16.0; platform_system == 'Darwin' and python_version <= '3.12'",
    "onnx>=1.17.0; (platform_system == 'Linux' or platform_system == 'Darwin') and python_version >= '3.12'",
]
onnxruntime = [
    "onnxruntime>=1.18.0",
]
sklearn_onnx = [
    "skl2onnx>=1.16.0, <1.20.0",
    "onnxmltools~=1.14",
    "opsml[onnx,onnxruntime]",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.0,<1.0.0",
    "maturin >= 1.4.0, < 2.0.0",
    "pytest >= 7.0.0, < 8.0.0",
    "pytest-cov >= 5.0.0, < 6.0.0",
    "ruff >= 0.1.0, < 1.0.0",
    "mypy >= 1.0.0, < 2.0.0",
    "black >= 24.3.0, < 25.0.0",
    "pylint >= 3.0.0, < 4.0.0",
    "pytest-lazy-fixture >= 0.6.3, < 1.0.0",
    "isort >= 5.13.2, < 6.0.0",
    "pip>=24.3.1",
    "transformers>=4.40.0,<4.45.0",
    "optimum<1.27.0",
    "torch>=2.4.0,<2.7.0",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2, <3",
    "polars>=1.10.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.5",
    "lightgbm>=4.0.0",
    "xgboost>=2.1.3",
    "scikit-learn>=1.6.0",
    "catboost>=1.2.5",
    "lightning>=2.4.0; python_version > '3.11'",
    "lightning~=2.1.2; python_version <= '3.11'",
    "pydantic-ai>=0.0.41",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "seaborn>=0.13.2",
    "google-adk>=1.25.0",
]

docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
]

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    "python/opsml/stubs/*",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.MASTER]
load-plugins = ["pylint.extensions.docparams"]
ignore-patterns = [
    "python/opsml/stubs/*",
]


[tool.pylint.messages_control]
max-line-length = 130
disable = [
    "too-few-public-methods",
    "design",
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-nested-blocks",
    "unused-argument",
    "fixme",
    "import-outside-toplevel",
    "import-self",
    "too-many-lines",
    "cyclic-import",
]

[tool.flake8]
# This section is just a doc placeholder..see setup.cfg
max-complexity = 10
format = "pylint"
statistics = "True"
max-line-length = 125
# ignore non-PEP8 lints
ignore = ["E203", "W503", "W0511"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.mypy]
# platform configuration
python_version = "3.12"
platform = "linux"
ignore_missing_imports = true
disable_error_code = ["return"]
check_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]
exclude = [
    '.*\/_.*\.pyi$',
    "python/opsml/stubs/*",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "opsml._opsml"
bindings = 'pyo3'
features = ["pyo3/extension-module", "pyo3/abi3-py39"]

[project.scripts]
opsml = "opsml.cli:run_opsml_cli"

[tool.uv]
package = true
