[package]
name = "opsml-agent-cli"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "OpsML per-framework CLI integration: skill/agent/tool/hook installation for Claude Code, Codex, Gemini CLI, and GitHub Copilot"

[lib]
doctest = false

[dependencies]
dirs = { workspace = true }
opsml-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
