[package]
name = "opsml-app"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-cards = { workspace = true }
opsml-cli = { workspace = true }
opsml-registry = { workspace = true }
opsml-state = { workspace = true }
opsml-types = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
pyo3 = { workspace = true }
scouter-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []

