[package]
name = "opsml-auth"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
password-auth = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
opsml-sql = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
 
[dev-dependencies]
mockito = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }