[package]
name = "opsml-cards"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
opsml-crypt = { workspace = true }
opsml-error = { workspace = true }
opsml-interfaces = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


