[package]
name = "opsml-cards"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
names = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-interfaces = { workspace = true }
opsml-service = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true}
opsml-toml = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
opsml-version = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true }
scouter-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
server = ["opsml-storage/server"]


