[package]
name = "opsml-cards"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
names = { workspace = true }
opsml-agent-cli = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-interfaces = { workspace = true, optional = true }
opsml-service = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true}
opsml-toml = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
opsml-version = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }
scouter-client = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[features]
default = []
server = ["opsml-storage/server"]
python = [
    "dep:pyo3",
    "dep:pythonize",
    "dep:opsml-interfaces",
    "opsml-utils/python",
    "opsml-types/python",
]


