[package]
name = "opsml-cli"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-error = { workspace = true }
opsml-registry = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tabled = { workspace = true }