[package]
name = "opsml-cli"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "OpsML CLI - Command line interface for OpsML"

[dependencies]
opsml-cards = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-registry = { workspace = true }
opsml-semver = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-toml = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
opsml-version = { workspace = true }
scouter-client = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

# this should only be downloaded for linux deps
[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.*"
tar = "*"


[dev-dependencies]
mockall = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }