[package]
name = "opsml-client"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
indicatif = { workspace = true }
opsml-cards = { workspace = true }
opsml-colors = { workspace = true }
opsml-contracts = { workspace = true }
opsml-error = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-types = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }

[dev-dependencies]
mockito = "1.*"
tokio = { workspace = true }
