[package]
name = "opsml-client"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-crypt = { workspace = true }
opsml-error = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
opsml-version = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = "1.*"
tokio = { workspace = true }
