[package]
name = "opsml-contracts"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
colored_json = { workspace = true }
opsml-cards = { workspace = true }
opsml-colors = { workspace = true }
opsml-error = { workspace = true }
opsml-semver = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
tabled = { workspace = true, features = ["ansi"] }

