[package]
name = "opsml-crypt"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Error handling for OpsML"

[lib]
doctest = false

[dependencies]
opsml-utils = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
