[package]
name = "opsml-deck"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
opsml-error = { workspace = true }
opsml-interfaces = { workspace = true }
opsml-registry = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = []


