[package]
name = "opsml-evaluate"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Evaluation logic for opsml"

[lib]
doctest = false

[dependencies]
opsml-interfaces = { workspace = true }
opsml-state = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
scouter-client = { workspace = true }

pyo3 = { workspace = true }
potato-head = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
