[package]
name = "opsml-events"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
opsml-sql = { workspace = true }
opsml-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
 