[package]
name = "opsml-experiment"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-cards = { workspace = true }
opsml-error = { workspace = true }
opsml-crypt = { workspace = true }
opsml-registry = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }

chrono = { workspace = true }
names = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
server = ["opsml-storage/server"]

