[package]
name = "opsml-experiment"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-cards = { workspace = true }
opsml-crypt = { workspace = true }
opsml-registry = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
scouter-client = { workspace = true }

mime_guess = { workspace = true }
chrono = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
server = ["opsml-storage/server"]

