[package]
name = "opsml-genai"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Making prompts simple"

[lib]
doctest = false


[dependencies]
opsml-state = { workspace = true }
potato-head = { workspace = true }

pyo3 = { workspace = true }
mime_guess = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }