[package]
name = "opsml-genai"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "OpsML GenAI - Functionality for working with GenAI technologies"


[lib]
doctest = false

[dependencies]
opsml-registry = { workspace = true }
opsml-types = { workspace = true }
opsml-version = { workspace = true }
pyo3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }