[package]
name = "opsml-interfaces"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-error = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }
ort = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }
scouter-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }