[package]
name = "opsml-interfaces"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-types = { workspace = true }
opsml-state = { workspace = true }
opsml-utils = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true }
pythonize = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
scouter-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(all(target_arch = "x86_64", target_os = "macos")))'.dependencies]
ort = { workspace = true }