[package]
name = "opsml-logging"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Logging for OpsML"

[lib]
doctest = false

[dependencies]
dynfmt = { workspace = true }
opsml-error = { workspace = true }
opsml-types = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }