[package]
name = "opsml-mcp"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "MCP server for OpsML documentation"
license = "MIT"

[lib]
doctest = false

[[bin]]
name = "opsml-mcp"
path = "src/main.rs"

[dependencies]
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
