[package]
name = "opsml-mocks"
version = { workspace = true }
edition = "2021"

[lib]
name = "opsml_mocks"
# for future work: removing this causes ort compilation to fail for some reason
# Causes a "can't find native onnxruntime crate" even though onnxruntime is installed prior
crate-type = ["cdylib", "rlib"] 

[dependencies]
mockito = { workspace = true, optional = true }
potato-head = { workspace = true , features = ["mock"] }
opsml-registry = { workspace = true }
opsml-server = { workspace = true, optional = true }
opsml-storage = { workspace = true, optional = true }
opsml-state = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true, optional = true }
scouter-client = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
server = [
    "opsml-registry/server",
    "opsml-server",
    "tokio",
    "reqwest",
    "opsml-storage",
    "mockito",
    "serde_json"
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
debug = false