[package]
name = "opsml-registry"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
const_format = { workspace = true }
opsml-cards = { workspace = true }
opsml-client = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-interfaces = { workspace = true }
opsml-types = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-sql = { workspace = true, optional = true }
opsml-state = { workspace = true }
opsml-storage = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
sqlx = { workspace = true, optional = true }
scouter-client = { workspace = true }
semver = { workspace = true, optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[features]
default = []
server = ["opsml-sql", "sqlx", "semver", "opsml-storage/server"]