[package]
name = "opsml-run"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-error = { workspace = true }
opsml-registry = { workspace = true }
opsml-semver = { workspace = true }
opsml-storage = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }

chrono = { workspace = true }
names = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


