[package]
name = "opsml-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Server for OpsML"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
opsml-auth = { workspace = true }
opsml-cards = { workspace = true }
opsml-client = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-storage = { workspace = true }
opsml-sql = { workspace = true }
opsml-utils = { workspace = true }
opsml-error = { workspace = true }
opsml-types = { workspace = true }

mime_guess = { workspace = true }
password-auth = { workspace = true }
rust-embed = { workspace = true }
rusty-logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
http-body-util = "0.*"
mockall = "0.*"
mockito = "1.*"
rand = "0.*"
serde_qs = "0.*"
tower = { version = "0.*", features = ["util"] }