[package]
name = "opsml-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Server for OpsML"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
opsml-auth = { workspace = true }
opsml-events = { workspace = true }
opsml-client = { workspace = true }
opsml-colors = { workspace = true }
opsml-crypt = { workspace = true }
opsml-semver = { workspace = true }
opsml-settings = { workspace = true }
opsml-storage = { workspace = true, features = ["server"] }
opsml-sql = { workspace = true }
opsml-utils = { workspace = true }
opsml-types = { workspace = true }
scouter-client = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mime_guess = { workspace = true }
mimalloc = { workspace = true }
password-auth = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
rusty-logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = "0.*"
mockall = { workspace = true }
mockito = { workspace = true }
rand = "0.*"
tower = { version = "0.*", features = ["util"] }
jsonwebtoken = { workspace = true }

[[test]]
name = "integration"
path = "tests/lib.rs"
