[package]
name = "opsml-settings"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "MIT"
description = "Opsml settings rust and python bindings"

[dependencies]
opsml-error = { workspace = true }
opsml-types = { workspace = true }
opsml-utils = { workspace = true }

pyo3 = { workspace = true }
rand = { workspace = true }
rusty-logging = { workspace = true }
serde = { workspace = true }